# ShoeBot

./: .gitignore  LICENSE  NOTICE.md  README.md
Hardware/: BaseMount.STEP  BaseMount_Clips.STEP  BasePlate_Ext_Corner.STEP  BasePlate_Ext_Middle.STEP  BasePlate_Int_Corner.STEP  BasePlate_Int_Middle.STEP
Hardware/Attachment Points/STEPs/: BaseMount.STEP  BaseMount_Clips.STEP  BasePlate_Ext_Corner.STEP  BasePlate_Ext_Middle.STEP  BasePlate_Int_Corner.STEP  BasePlate_Int_Middle.STEP
Hardware/Attachment Points/STLs/: BaseMount.STL  BaseMount_Clips.STL  BasePlate_Ext_Corner.STL  BasePlate_Ext_Middle.STL  BasePlate_Int_Corner.STL  BasePlate_Int_Middle.STL  PlateSpacer.STL
Hardware/Central Electronic Mounts/STEPs/: Buck_Mount.STEP  Central_Electronics_Mount.STEP  Rpi_3b_mount.STEP
Hardware/Central Electronic Mounts/STLs/: Central_Electronics_Mount.STL  Rpi_3b_mount.STL
Hardware/SPI Hub PCB KiCad files/: SPI_Hub.kicad_pcb  SPI_Hub.kicad_prl  SPI_Hub.kicad_pro  SPI_Hub.kicad_sch  SPI_Hub_Rev0.kicad_sch  fp-info-cache
Hardware/Wheel Module/Motor Characterizetion STL/: MotorWheel_Characterization.STL
Hardware/Wheel Module/STEPs/: Handle.STEP  MotorMount_3corner_plus_attach.STEP  MotorMount_SideBottom.STEP  Motor_Mount_Attachment.STEP  Motor_Mount_Side_Bottom.STEP  Pico_Shield.STEP
Hardware/Wheel Module/STLs/: Handle.STL  MotorMount_3corner_plus_attach.STL  MotorMount_Attachment.STL  Motor_Mount_Attachment.STL  Motor_Mount_Side_Bottom.STL  Pico_Shield.STL
Software/: Description
Software/Hardware Characterization/Wheels Module/: Filters.py  Kalman.py  MotorCharacterize_SpeedBoost.py  PostProcessing.py  main.py
Software/Hardware Characterization/Wheels Module/Arduino_MotorCharacterize/: Arduino_MotorCharacterize.ino  Movement.ino  SerialComms.cpp  SerialComms.h  StateMachine.ino  Trajectory.cpp  Utils.cpp
Software/Hardware Characterization/Wheels Module/Arduino_MotorCharacterize/Headers/: Trajectory.h  Utils.h
Software/Hardware Characterization/Wheels Module/Python/: .gitignore  main.py  requirements.txt
Software/Hardware Characterization/Wheels Module/Python/Filters/: pyproject.toml
Software/Hardware Characterization/Wheels Module/Python/Filters/src/: __init__.py  pyproject.toml
Software/Hardware Characterization/Wheels Module/Python/Filters/src/Filters/: __init__.py
Software/Hardware Characterization/Wheels Module/Python/MCMC_Simulator/: pyproject.toml
Software/Hardware Characterization/Wheels Module/Python/MCMC_Simulator/src/: MCMC_Simulator.py  __init__.py  pyproject.toml
Software/Hardware Characterization/Wheels Module/Python/MCMC_Simulator/src/MCMC_Simulator/: __init__.py
Software/Hardware Characterization/Wheels Module/Python/PostProcessing/: __init__.py  pyproject.toml
Software/Hardware Characterization/Wheels Module/Python/SerialStreamParser/: SerialStreamParser.py  __init__.py  pyproject.toml
Software/Hardware Characterization/Wheels Module/Python/StateModels/: __init__.py  pyproject.toml
Software/Pi SPI Test pigpio/Board_Tests/PCB_Tests/: BOARD_GLOBALS.py  SPI_Board.py  ShiftRegister.py  Test_Parameter_Globals.py  custom_board_test_main.py  run.sh
Software/Pi SPI Test pigpio/Board_Tests/Shift_Reg_Tests/: SHIFT_GLOBALS.py  ShiftRegister.py  shift_reg_main.py
Software/pico_code/: CMakeLists.txt
Software/pico_code/main/: CMakeLists.txt
Software/pico_code/main/modules/: EchoDevice.cpp  EchoDevice.h  Module.cpp  Module.h
Software/pico_code/main/src/: main.cpp
Software/pico_code/main/utils/: SPITools.cpp  SPITools.h
Software/shoebot_pico/: CMakeLists.txt
Software/shoebot_pico/src/: CMakeLists.txt  main.cpp
Software/shoebot_pico/src/modules/: CMakeLists.txt  EchoDevice.cpp  Module.cpp  Module.h
Software/shoebot_pico/src/modules/modules/: EchoDevice.cpp  EchoDevice.h  Module.cpp  Module.h
Software/shoebot_pico/src/utils/: CMakeLists.txt  SPITools.cpp  SPITools.h
docs/: temp
(+8 files in other folders)
