[project]
name = "MCMC_Simulator"
version = "0.1.0"
description = "A simple example package"
authors = [
    { name = "Tyler Bartunek", email = "tylerbartunek@gmail.com" },
]
license = "Apache-2.0"
dependencies = ['scipy', 'pymc', 'statsmodels', 'arviz', 'tqdm', 'pandas', 'numpy', 'PostProcessing','StateModels', 'Filters'] # List any external dependencies here

[build-system]
requires = ["hatchling"] # Or other build backends like setuptools or poetry
build-backend = "hatchling.build"

[tool.setuptools.package-dir]
"" = "src"